# CANOpen-Security-Platform

./: .gitignore  ARCHITECTURE.md  ORCHESTRATOR_QUICK_GUIDE.md  QUICK_START.md  README.md  WHATS_CHANGED.md  pyproject.toml  requirements.txt  setup.py
canopen_security_platform/: __init__.py
canopen_security_platform/cli/: __init__.py  main.py
canopen_security_platform/discovery/: __init__.py  enumerator.py  lss_scan.py  passive.py  sdo_probe.py
canopen_security_platform/fuzzing/: __init__.py  concurrent_fuzzer.py  emcy_fuzzer.py  lss_fuzzer.py  nmt_fuzzer.py  pdo_fuzzer.py  sdo_fuzzer.py  sync_fuzzer.py
canopen_security_platform/hal/: __init__.py  bus_pcan.py
canopen_security_platform/monitoring/: __init__.py  event_handlers.py  oracle.py
canopen_security_platform/orchestrator/: README.md  __init__.py  config.yaml  run_full_security_suite.py
canopen_security_platform/reporting/: __init__.py
canopen_security_platform/utils/: frame_utils.py  logging_utils.py
tests/: conftest.py  test_discovery_lss.py  test_discovery_passive.py  test_discovery_sdo.py  test_fuzzing_pdo.py  test_fuzzing_sdo.py  test_fuzzing_tier1.py  test_hal_pcan.py  test_monitoring_oracle.py  test_od_hidden_scanner.py  test_od_loader.py
